--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
                             <p class="role">Chairwoman</p>
                         </div>
                         <div class="team-member">
-                            <img src="https://via.placeholder.com/150" alt="Phumalini Sihlongonyane" class="profile-pic">
+                            <img src="https://via.placeholder.com/150" alt="Empty slot for future member" class="profile-pic">
                             <h3>Coming Soon</h3>
                             <p class="role">Vice-Chairman</p>
                         </div>
@@ -159,10 +159,18 @@
     </main>
 
     <footer>
-        <div class="container">
-            <p>&copy; 2024 The Parrots Foundation. All Rights Reserved.</p>
+    <div class="container">
+        <div class="newsletter">
+            <h4>Stay Up to Date!</h4>
+            <p>Subscribe to our newsletter for the latest news and updates.</p>
+            <form action="#" method="post">
+                <input type="email" name="email" placeholder="Enter your email" required>
+                <button type="submit">Subscribe</button>
+            </form>
         </div>
-    </footer>
+        <p>&copy; 2024 The Parrots Foundation. All Rights Reserved.</p>
+    </div>
+</footer>
 
     <script src="js/script.js"></script>
 </body>
