--- a/ai-it.html
+++ b/ai-it.html
@@ -145,10 +145,18 @@
     </main>
 
     <footer>
-        <div class="container">
-            <p>&copy; 2024 The Parrots Foundation. All Rights Reserved.</p>
+    <div class="container">
+        <div class="newsletter">
+            <h4>Stay Up to Date!</h4>
+            <p>Subscribe to our newsletter for the latest news and updates.</p>
+            <form action="#" method="post">
+                <input type="email" name="email" placeholder="Enter your email" required>
+                <button type="submit">Subscribe</button>
+            </form>
         </div>
-    </footer>
+        <p>&copy; 2024 The Parrots Foundation. All Rights Reserved.</p>
+    </div>
+</footer>
 
     <script src="js/script.js"></script>
 </body>
