--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
                         <p>Feel free to reach out to us through any of the following channels.</p>
                         <div class="contact-item">
                             <i class="fas fa-map-marker-alt"></i>
-                            <p>123 Foundation Lane, Mbabane, Eswatini</p>
+                            <p>Bulembu Pigg's Peak, Mbabane, Eswatini</p>
                         </div>
                         <div class="contact-item">
                             <i class="fas fa-envelope"></i>
@@ -57,7 +57,7 @@
                         </div>
                         <div class="contact-item">
                             <i class="fas fa-phone"></i>
-                            <p>+268 7654 3210</p>
+                            <p>+268 78231873</p>
                         </div>
                         <div class="social-icons">
                             <a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -92,10 +92,18 @@
     </main>
 
     <footer>
-        <div class="container">
-            <p>&copy; 2024 The Parrots Foundation. All Rights Reserved.</p>
+    <div class="container">
+        <div class="newsletter">
+            <h4>Stay Up to Date!</h4>
+            <p>Subscribe to our newsletter for the latest news and updates.</p>
+            <form action="#" method="post">
+                <input type="email" name="email" placeholder="Enter your email" required>
+                <button type="submit">Subscribe</button>
+            </form>
         </div>
-    </footer>
+        <p>&copy; 2024 The Parrots Foundation. All Rights Reserved.</p>
+    </div>
+</footer>
 
     <script src="js/script.js"></script>
 </body>
