--- a/blog.html
+++ b/blog.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog - The Parrots Foundation</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
-    <link rel="manifest" href="favicon_io/site.webmanifest">
+    <title>Blog - Imphumelelo Yentsha Foundation</title>
+    
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="/favicon_io/site.webmanifest">
+    <link rel="icon" type="image/x-icon" href="/favicon_io/favicon.ico">
+
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
@@ -16,7 +19,7 @@
     <header>
         <div class="container nav-container">
             <div class="logo-container">
-                <img src="picture.jpg" alt="The Parrots Foundation Logo" class="logo">
+                <img src="favicon_io/picture.jpg" alt="Imphumelelo Yentsha Foundation" class="logo">
                 <span class="tagline">The Bridge Between You & Your Success</span>
             </div>
             <nav>
@@ -61,7 +64,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 The Parrots Foundation. All Rights Reserved.</p>
+            <p>&copy; 2024 Imphumelelo Yentsha Foundation. All Rights Reserved.</p>
         </div>
     </footer>
 
