--- a/about.html
+++ b/about.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us - The Parrots Foundation</title>
+    <title>About Us - Imphumelelo Yentsha Foundation</title>
 
-    <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
-    <link rel="manifest" href="favicon_io/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="/favicon_io/site.webmanifest">
+    <link rel="icon" type="image/x-icon" href="/favicon_io/favicon.ico">
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
     <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
     <style type="text/css">
         #mc_embed_signup{background:#fff; false;clear:left; font:14px Helvetica,Arial,sans-serif; width: 600px;}
@@ -23,18 +23,18 @@
     <header>
         <div class="container nav-container">
             <div class="logo-container">
-                <img src="picture.jpg" alt="The Parrots Foundation Logo" class="logo">
+                <img src="favicon_io/picture.jpg" alt="Imphumelelo Yentsha Foundation Logo" class="logo">
                 <span class="tagline">The Bridge Between You & Your Success</span>
             </div>
             <nav>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="business.html">Business Support</a></li>
-                    <li><a href="ai-it.html">AI & IT Training</a></li>
-                    <li><a href="about.html">About Us</a></li>
-                    <li><a href="blog.html">Blog</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                    <li><a href="donate.html" class="nav-donate-btn">Donate</a></li>
+                    <li><a href="/index.html">Home</a></li>
+                    <li><a href="/business.html">Business Support</a></li>
+                    <li><a href="/ai-it.html">AI & IT Training</a></li>
+                    <li><a href="/about.html">About Us</a></li>
+                    <li><a href="/blog.html">Blog</a></li>
+                    <li><a href="/contact.html">Contact</a></li>
+                    <li><a href="/donate.html" class="nav-donate-btn">Donate</a></li>
                 </ul>
             </nav>
         </div>
@@ -43,7 +43,7 @@
     <main>
         <section id="service-hero">
             <div class="container">
-                <h1>About The Parrots Foundation</h1>
+                <h1>About Imphumelelo Yentsha Foundation</h1>
                 <p>We are dedicated to empowering individuals and building a prosperous Eswatini.</p>
             </div>
         </section>
@@ -52,7 +52,7 @@
             <div class="container">
                 <div class="story-content">
                     <h2>Our Story and Purpose</h2>
-                    <p>The Parrots Foundation was born from a powerful legacy. A Canadian family dedicated themselves to helping young people reach their full potential not only in Bulembu but across all of Eswatini. Tragically, their sudden passing in 2019 left their important work in suspension. In honor of their mission and to ensure their good work would continue, the Parrots Foundation was created. We are founded on the belief that access to resources and knowledge is the key to unlocking human potential, and our journey began with the simple idea of continuing their legacy: to create a bridge between ambitious individuals and the tools they need to succeed..</p>
+                    <p>Imphumelelo Yentsha Foundation was born from a powerful legacy. A Canadian family dedicated themselves to helping young people reach their full potential not only in Bulembu but across all of Eswatini. Tragically, their sudden passing in 2019 left their important work in suspension. In honor of their mission and to ensure their good work would continue, Imphumelelo Yentsha Foundation was created. We are founded on the belief that access to resources and knowledge is the key to unlocking human potential, and our journey began with the simple idea of continuing their legacy: to create a bridge between ambitious individuals and the tools they need to succeed..</p>
                     <div class="mv-cards">
                         <div class="mv-card">
                             <h3>Our Mission</h3>
@@ -107,27 +107,27 @@
                     <h3>Management Team</h3>
                     <div class="team-grid">
                         <div class="team-member">
-                            <img src="team_pics/Ayanda.jpg" alt="Ayanda Mkhonta" class="profile-pic">
+                            <img src="/team_pics/Ayanda.jpg" alt="Ayanda Mkhonta" class="profile-pic">
                             <h3>Ayanda Mkhonta</h3>
                             <p class="role">Founder & CEO</p>
                         </div>
                         <div class="team-member">
-                            <img src="team_pics/sakhile.jpg" alt="Sakhile Gamedze" class="profile-pic">
+                            <img src="/team_pics/sakhile.jpg" alt="Sakhile Gamedze" class="profile-pic">
                             <h3>Sakhile Gamedze</h3>
                             <p class="role">Head of Business Development</p>
                         </div>
                         <div class="team-member">
-                            <img src="team_pics/Tenele.jpg" alt="Tenele Tsele" class="profile-pic">
+                            <img src="/team_pics/Tenele.jpg" alt="Tenele Tsele" class="profile-pic">
                             <h3>Tenele Tsele</h3>
                             <p class="role">Operations Manager</p>
                         </div>
                         <div class="team-member">
-                            <img src="team_pics/Sivumelwano.jpg" alt="Sivumelwano Zulu" class="profile-pic">
+                            <img src="/team_pics/Sivumelwano.jpg" alt="Sivumelwano Zulu" class="profile-pic">
                             <h3>Sivumelwano Zulu</h3>
                             <p class="role">Head of Training</p>
                         </div>
                         <div class="team-member">
-                            <img src="team_pics/Nkhosingiphile.jpg" alt="Nkhosingiphile Mangwe" class="profile-pic">
+                            <img src="/team_pics/Nkhosingiphile.jpg" alt="Nkhosingiphile Mangwe" class="profile-pic">
                             <h3>Nkhosingiphile Mangwe</h3>
                             <p class="role">Program Manager</p>
                         </div>
@@ -141,24 +141,24 @@
                 <h2 class="section-title">Frequently Asked Questions</h2>
                 <div class="faq-container">
                     <details class="faq-item">
-                        <summary>What is the Parrots Foundation?</summary>
-                        <p>The Parrots Foundation is a non-profit organization dedicated to empowering entrepreneurs and innovators in Eswatini by providing startup capital, mentorship, and training in AI & IT. The name was inspired from a Canadian Family (Perrots), whom their main aim was to help young people reach their full potential, but their sudden death left their work hanging, thus the Parrot Foundation which aims to continue their good work in ESwatini.</p>
+                        <summary>What is Imphumelelo Yentsha Foundation?</summary>
+                        <p>Imphumelelo Yentsha Foundation is a non-profit organization dedicated to empowering entrepreneurs and innovators in Eswatini by providing startup capital, mentorship, and training in AI & IT. Inspired by a Canadian Family (Perrots), whom their main aim was to help young people reach their full potential, but their sudden death left their work hanging, thus the Imphumelelo Yentsha Foundation which aims to continue their good work in ESwatini.</p>
                     </details>
                     <details class="faq-item">
                         <summary>How can I apply for a business loan?</summary>
-                        <p>You can apply for a business loan by visiting our <a href="business.html">Business Support</a> page and filling out the application form. Our team will review your application and get in touch with you.</p>
+                        <p>You can apply for a business loan by visiting our <a href="/business.html">Business Support</a> page and filling out the application form. Our team will review your application and get in touch with you.</p>
                     </details>
                     <details class="faq-item">
                         <summary>What kind of AI & IT training do you offer?</summary>
-                        <p>We offer training modules that cover basic computer skills, an introduction to Artificial Intelligence (including tools like ChatGPT), and cybersecurity basics. You can find more information on our <a href="ai-it.html">AI & IT Training</a> page.</p>
+                        <p>We offer training modules that cover basic computer skills, an introduction to Artificial Intelligence (including tools like ChatGPT), and cybersecurity basics. You can find more information on our <a href="/ai-it.html">AI & IT Training</a> page.</p>
                     </details>
                     <details class="faq-item">
                         <summary>Can I donate to a specific program?</summary>
-                        <p>Yes, on our <a href="donate.html">Donate</a> page, you can specify whether you would like your donation to go towards Business Development, AI & ICT Training, or general operations.</p>
+                        <p>Yes, on our <a href="/donate.html">Donate</a> page, you can specify whether you would like your donation to go towards Business Development, AI & ICT Training, or general operations.</p>
                     </details>
                     <details class="faq-item">
                         <summary>How can I contact the foundation?</summary>
-                        <p>You can reach us through the form on our <a href="contact.html">Contact Us</a> page, or by phone and email listed on that page.</p>
+                        <p>You can reach us through the form on our <a href="/contact.html">Contact Us</a> page, or by phone and email listed on that page.</p>
                     </details>
                 </div>
             </div>
@@ -195,11 +195,11 @@
                     </div>
                 </div>
             </div>
-            <p>&copy; 2024 The Parrots Foundation. All Rights Reserved.</p>
+            <p>&copy; 2024 Imphumelelo Yentsha Foundation. All Rights Reserved.</p>
         </div>
     </footer>
 
-    <script src="js/script.js"></script>
+    <script src="/js/script.js"></script>
 
     <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script>
     <script type="text/javascript">(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';fnames[6]='COMPANY';ftypes[6]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
