--- a/first-blog-post.html
+++ b/first-blog-post.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>First Post: The Journey Begins - The Parrots Foundation</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
-    <link rel="manifest" href="favicon_io/site.webmanifest">
-    <link rel="stylesheet" href="css/style.css">
+    
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="/favicon_io/site.webmanifest">
+    <link rel="icon" type="image/x-icon" href="/favicon_io/favicon.ico">
+    
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
@@ -16,18 +19,18 @@
     <header>
         <div class="container nav-container">
             <div class="logo-container">
-                <img src="picture.jpg" alt="The Parrots Foundation Logo" class="logo">
+                <img src="favicon_io/picture.jpg" alt="Imphumelelo Yentsha Logo" class="logo">
                 <span class="tagline">The Bridge Between You & Your Success</span>
             </div>
             <nav>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="business.html">Business Support</a></li>
-                    <li><a href="ai-it.html">AI & IT Training</a></li>
-                    <li><a href="about.html">About Us</a></li>
-                    <li><a href="blog.html">Blog</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                    <li><a href="donate.html" class="nav-donate-btn">Donate</a></li>
+                    <li><a href="/index.html">Home</a></li>
+                    <li><a href="/business.html">Business Support</a></li>
+                    <li><a href="/ai-it.html">AI & IT Training</a></li>
+                    <li><a href="/about.html">About Us</a></li>
+                    <li><a href="/blog.html">Blog</a></li>
+                    <li><a href="/contact.html">Contact</a></li>
+                    <li><a href="/donate.html" class="nav-donate-btn">Donate</a></li>
                 </ul>
             </nav>
         </div>
@@ -43,15 +46,15 @@
 
         <section id="post-content">
             <div class="container">
-                <p>Welcome to the first post on The Parrots Foundation blog! We are thrilled to launch this platform as a way to share our mission, highlight the amazing entrepreneurs we support, and provide updates on our progress.</p>
+                <p>Welcome to the first post on The Imphumelelo Yentsha Foundation blog! We are thrilled to launch this platform as a way to share our mission, highlight the amazing entrepreneurs we support, and provide updates on our progress.</p>
                 <p>Over the coming months, we will be sharing stories of innovation, success, and the impact our community is making across Eswatini. Stay tuned!</p>
-                </div>
+            </div>
         </section>
     </main>
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 The Parrots Foundation. All Rights Reserved.</p>
+            <p>&copy; 2024 Imphumelelo Yentsha Foundation. All Rights Reserved.</p>
         </div>
     </footer>
 
