--- a/index.html
+++ b/index.html
@@ -4,17 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="iMlD99T4wUDTUUJj9DvPN2oVQo0CAIhTeLZ6cSIJzWM" />
-    <title>The Parrots Foundation</title>
+    <title>Imphumelelo Yentsha</title>
 
-    <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
-    <link rel="manifest" href="favicon_io/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="/favicon_io/site.webmanifest">
+    <link rel="icon" type="image/x-icon" href="/favicon_io/favicon.ico">
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/css/style.css">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
     <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
+    
     <style type="text/css">
         #mc_embed_signup{background:#fff; false;clear:left; font:14px Helvetica,Arial,sans-serif; width: 600px;}
     </style>
@@ -24,18 +26,18 @@
     <header>
         <div class="container nav-container">
             <div class="logo-container">
-                <img src="picture.jpg" alt="The Parrots Foundation Logo" class="logo">
+                <img src="favicon_io/picture.jpg" alt="Imphumelelo Yentsha Foundation" class="logo">
                 <span class="tagline">The Bridge Between You & Your Success</span>
             </div>
             <nav>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="business.html">Business Support</a></li>
-                    <li><a href="ai-it.html">AI & IT Training</a></li>
-                    <li><a href="about.html">About Us</a></li>
-                    <li><a href="blog.html">Blog</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                    <li><a href="donate.html" class="nav-donate-btn">Donate</a></li>
+                    <li><a href="/index.html">Home</a></li>
+                    <li><a href="/business.html">Business Support</a></li>
+                    <li><a href="/ai-it.html">AI & IT Training</a></li>
+                    <li><a href="/about.html">About Us</a></li>
+                    <li><a href="/blog.html">Blog</a></li>
+                    <li><a href="/contact.html">Contact</a></li>
+                    <li><a href="/donate.html" class="nav-donate-btn">Donate</a></li>
                 </ul>
             </nav>
         </div>
@@ -45,10 +47,10 @@
         <section id="hero">
             <div class="container">
                 <h1>Empowering Eswatini's Entrepreneurs and Innovators.</h1>
-                <p>The Parrots Foundation provides startup capital, mentorship, and cutting-edge training in AI & IT to build a new generation of leaders.</p>
+                <p>Imphumelelo Yentsha Foundation provides startup capital, mentorship, and cutting-edge training in AI & IT to build a new generation of leaders.</p>
                 <div class="hero-buttons">
                     <a href="#focus" class="btn">Explore Our Programs</a>
-                    <a href="donate.html" class="btn btn-secondary">Support Our Mission</a>
+                    <a href="/donate.html" class="btn btn-secondary">Support Our Mission</a>
                 </div>
             </div>
         </section>
@@ -62,13 +64,13 @@
                         <i class="fas fa-hand-holding-usd"></i>
                         <h3>Business Support & Capital</h3>
                         <p>We provide aspiring entrepreneurs with the financial capital, mentorship, and business training needed to launch and grow a successful venture in Eswatini.</p>
-                        <a href="business.html" class="btn-card">Learn More</a>
+                        <a href="/business.html" class="btn-card">Learn More</a>
                     </div>
                     <div class="card">
                         <i class="fas fa-robot"></i>
                         <h3>AI & IT Training</h3>
                         <p>Our programs equip you with essential digital skills, from basic computer literacy to an introduction to AI, preparing you for the future of work.</p>
-                        <a href="ai-it.html" class="btn-card">Learn More</a>
+                        <a href="/ai-it.html" class="btn-card">Learn More</a>
                     </div>
                 </div>
             </div>
@@ -93,9 +95,9 @@
         <section id="cta">
             <div class="container text-center">
                 <h2>Ready to Take the Next Step?</h2>
-                <p>Whether you're starting a new business or looking to expand your skills, The Parrots Foundation is here to support you.</p>
-                <a href="business.html" class="btn btn-cta">Apply for a Loan Today</a>
-                <a href="ai-it.html" class="btn btn-cta btn-secondary">Enroll in Training</a>
+                <p>Whether you're starting a new business or looking to expand your skills, Imphumelelo Yentsha Foundation is here to support you.</p>
+                <a href="/business.html" class="btn btn-cta">Apply for a Loan Today</a>
+                <a href="/ai-it.html" class="btn btn-cta btn-secondary">Enroll in Training</a>
             </div>
         </section>
     </main>
@@ -131,11 +133,11 @@
                     </div>
                 </div>
             </div>
-            <p>&copy; 2024 The Parrots Foundation. All Rights Reserved.</p>
+            <p>&copy; 2024 Imphumelelo Yentsha Foundation. All Rights Reserved.</p>
         </div>
     </footer>
 
-    <script src="js/script.js"></script>
+    <script src="/js/script.js"></script>
 
     <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script>
     <script type="text/javascript">(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';fnames[6]='COMPANY';ftypes[6]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
