--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
                     <div class="team-grid">
                         <div class="team-member">
                             <img src="https://via.placeholder.com/150" alt="Thandeka Gule" class="profile-pic">
-                            <h3>Thandeka Gule</h3>
+                            <h3> Gule</h3>
                             <p class="role">Chairwoman</p>
                         </div>
                         <div class="team-member">
@@ -87,7 +87,7 @@
                         </div>
                         <div class="team-member placeholder-member">
                             <img src="https://via.placeholder.com/150?text=Empty+Slot" alt="Empty slot for future member" class="profile-pic">
-                            <h3>Phum'lane Sihlongonyane</h3>
+                            <h3>Coming soon</h3>
                             <p class="role">Treasure</p>
                         </div>
                         <div class="team-member placeholder-member">
@@ -107,29 +107,29 @@
                     <h3>Management Team</h3>
                     <div class="team-grid">
                         <div class="team-member">
-                            <img src="/team_pics/Ayanda.jpg" alt="Ayanda Mkhonta" class="profile-pic">
+                            <img src="/team_pics1/Ayanda.jpg" alt="Ayanda Mkhonta" class="profile-pic">
                             <h3>Ayanda Mkhonta</h3>
                             <p class="role">Founder & CEO</p>
                         </div>
                         <div class="team-member">
-                            <img src="/team_pics/sakhile.jpg" alt="Sakhile Gamedze" class="profile-pic">
+                            <img src="/team_pics1/sakhile.jpg" alt="Sakhile Gamedze" class="profile-pic">
                             <h3>Sakhile Gamedze</h3>
-                            <p class="role">Head of Business Development</p>
+                            <p class="role">No Role Yet</p>
                         </div>
                         <div class="team-member">
-                            <img src="/team_pics/Tenele.jpg" alt="Tenele Tsele" class="profile-pic">
+                            <img src="/team_pics1/Tenele.jpg" alt="Tenele Tsele" class="profile-pic">
                             <h3>Tenele Tsele</h3>
                             <p class="role">Operations Manager</p>
                         </div>
                         <div class="team-member">
-                            <img src="/team_pics/Sivumelwano.jpg" alt="Sivumelwano Zulu" class="profile-pic">
+                            <img src="/team_pics1/Sivumelwano.jpg" alt="Sivumelwano Zulu" class="profile-pic">
                             <h3>Sivumelwano Zulu</h3>
-                            <p class="role">Head of Training</p>
+                            <p class="role">No Role yet</p>
                         </div>
                         <div class="team-member">
-                            <img src="/team_pics/Nkhosingiphile.jpg" alt="Nkhosingiphile Mangwe" class="profile-pic">
+                            <img src="/team_pics1/Nkhosingiphile.jpg" alt="Slevu" class="profile-pic">
                             <h3>Nkhosingiphile Mangwe</h3>
-                            <p class="role">Program Manager</p>
+                            <p class="role">No role yet</p>
                         </div>
                     </div>
                 </div>
