--- a/about.html
+++ b/about.html
@@ -109,7 +109,7 @@
                         <div class="team-member">
                             <img src="/team_pics1/Ayanda.jpg" alt="Ayanda Mkhonta" class="profile-pic">
                             <h3>Ayanda Mkhonta</h3>
-                            <p class="role">Founder & CEO</p>
+                            <p class="role">No Role yet</p>
                         </div>
                         <div class="team-member">
                             <img src="/team_pics1/sakhile.jpg" alt="Sakhile Gamedze" class="profile-pic">
