--- a/about.html
+++ b/about.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us - Imphumelelo Yentsha Foundation</title>
+    <title>About Us - New Hope Foundation</title>
 
-    <link rel="apple-touch-icon" sizes="180x180" href="/favicon_io/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon_io/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon_io/favicon-16x16.png">
-    <link rel="manifest" href="/favicon_io/site.webmanifest">
-    <link rel="icon" type="image/x-icon" href="/favicon_io/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="favicon_io/site.webmanifest">
+    <link rel="icon" type="image/x-icon" href="favicon_io/favicon.ico">
 
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
+    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
     <style type="text/css">
@@ -23,18 +24,18 @@
     <header>
         <div class="container nav-container">
             <div class="logo-container">
-                <img src="favicon_io/picture.jpg" alt="Imphumelelo Yentsha Foundation Logo" class="logo">
+                <img src="favicon_io/picture.png" alt="New Hope Foundation" class="logo">
                 <span class="tagline">The Bridge Between You & Your Success</span>
             </div>
             <nav>
                 <ul>
-                    <li><a href="/index.html">Home</a></li>
-                    <li><a href="/business.html">Business Support</a></li>
-                    <li><a href="/ai-it.html">AI & IT Training</a></li>
-                    <li><a href="/about.html">About Us</a></li>
-                    <li><a href="/blog.html">Blog</a></li>
-                    <li><a href="/contact.html">Contact</a></li>
-                    <li><a href="/donate.html" class="nav-donate-btn">Donate</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="business.html">Business Support</a></li>
+                    <li><a href="ai-it.html">AI & IT Training</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="donate.html" class="nav-donate-btn">Donate</a></li>
                 </ul>
             </nav>
         </div>
@@ -43,7 +44,7 @@
     <main>
         <section id="service-hero">
             <div class="container">
-                <h1>About Imphumelelo Yentsha Foundation</h1>
+                <h1>About New Hope Foundation</h1>
                 <p>We are dedicated to empowering individuals and building a prosperous Eswatini.</p>
             </div>
         </section>
@@ -51,8 +52,12 @@
         <section id="our-story">
             <div class="container">
                 <div class="story-content">
-                    <h2>Our Story and Purpose</h2>
-                    <p>Imphumelelo Yentsha Foundation was born from a powerful legacy. A Canadian family dedicated themselves to helping young people reach their full potential not only in Bulembu but across all of Eswatini. Tragically, their sudden passing in 2019 left their important work in suspension. In honor of their mission and to ensure their good work would continue, Imphumelelo Yentsha Foundation was created. We are founded on the belief that access to resources and knowledge is the key to unlocking human potential, and our journey began with the simple idea of continuing their legacy: to create a bridge between ambitious individuals and the tools they need to succeed..</p>
+                    <h2>Why We Do This</h2>
+                    <p>New Hope Foundation is a unique platform that allows every young person to dream, ESwatini is so rich when it comes
+                        to resources and support for young people, but then the youth lack the bridge to tape into those resources, for example to start a project
+                        you need funds or certain percentage to be granted those funds, Business Seminars are expensive to attend, mentorship and coaching is costly,
+                        laptops and IT lessons are costly as the world is moving digital, New Hope Foundation is creating the Bridge to that we bealive that every dream 
+                        is worth a try giving New Hope to Everyone..</p>
                     <div class="mv-cards">
                         <div class="mv-card">
                             <h3>Our Mission</h3>
@@ -78,12 +83,12 @@
                         <div class="team-member">
                             <img src="https://via.placeholder.com/150" alt="Thandeka Gule" class="profile-pic">
                             <h3> Gule</h3>
-                            <p class="role">Chairwoman</p>
+                            <p class="role">Chairperson</p>
                         </div>
                         <div class="team-member">
                             <img src="https://via.placeholder.com/150" alt="Empty slot for future member" class="profile-pic">
                             <h3>Coming Soon</h3>
-                            <p class="role">Vice-Chairman</p>
+                            <p class="role"><Vice-Chairperson></Vice-Chairperson></p>
                         </div>
                         <div class="team-member placeholder-member">
                             <img src="https://via.placeholder.com/150?text=Empty+Slot" alt="Empty slot for future member" class="profile-pic">
@@ -107,27 +112,27 @@
                     <h3>Management Team</h3>
                     <div class="team-grid">
                         <div class="team-member">
-                            <img src="/team_pics1/Ayanda.jpg" alt="Ayanda Mkhonta" class="profile-pic">
+                            <img src="team_pics1/Ayanda.jpg" alt="Ayanda Mkhonta" class="profile-pic">
                             <h3>Ayanda Mkhonta</h3>
                             <p class="role">No Role yet</p>
                         </div>
                         <div class="team-member">
-                            <img src="/team_pics1/sakhile.jpg" alt="Sakhile Gamedze" class="profile-pic">
+                            <img src="team_pics/sakhile.jpg" alt="Sakhile Gamedze" class="profile-pic">
                             <h3>Sakhile Gamedze</h3>
                             <p class="role">No Role Yet</p>
                         </div>
                         <div class="team-member">
-                            <img src="/team_pics1/Tenele.jpg" alt="Tenele Tsele" class="profile-pic">
+                            <img src="team_pics/Tenele.jpg" alt="Tenele Tsela" class="profile-pic">
                             <h3>Tenele Tsele</h3>
                             <p class="role">Operations Manager</p>
                         </div>
                         <div class="team-member">
-                            <img src="/team_pics1/Sivumelwano.jpg" alt="Sivumelwano Zulu" class="profile-pic">
+                            <img src="team_pics/Sivumelwano.jpg" alt="Sivumelwano Zulu" class="profile-pic">
                             <h3>Sivumelwano Zulu</h3>
                             <p class="role">No Role yet</p>
                         </div>
                         <div class="team-member">
-                            <img src="/team_pics1/Nkhosingiphile.jpg" alt="Slevu" class="profile-pic">
+                            <img src="team_pics1/Nkhosingiphile.jpg" alt="Slevu" class="profile-pic">
                             <h3>Nkhosingiphile Mangwe</h3>
                             <p class="role">No role yet</p>
                         </div>
@@ -141,24 +146,24 @@
                 <h2 class="section-title">Frequently Asked Questions</h2>
                 <div class="faq-container">
                     <details class="faq-item">
-                        <summary>What is Imphumelelo Yentsha Foundation?</summary>
-                        <p>Imphumelelo Yentsha Foundation is a non-profit organization dedicated to empowering entrepreneurs and innovators in Eswatini by providing startup capital, mentorship, and training in AI & IT. Inspired by a Canadian Family (Perrots), whom their main aim was to help young people reach their full potential, but their sudden death left their work hanging, thus the Imphumelelo Yentsha Foundation which aims to continue their good work in ESwatini.</p>
+                        <summary>What is New Hope Foundation?</summary>
+                        <p>New Hope Foundation is a non-profit organization dedicated to empowering entrepreneurs and innovators in Eswatini by providing startup capital, mentorship, and training in AI & IT. Inspired by a Canadian Family (Perrots), whom their main aim was to help young people reach their full potential, but their sudden death left their work hanging, thus the Imphumelelo Yentsha Foundation which aims to continue their good work in ESwatini.</p>
                     </details>
                     <details class="faq-item">
                         <summary>How can I apply for a business loan?</summary>
-                        <p>You can apply for a business loan by visiting our <a href="/business.html">Business Support</a> page and filling out the application form. Our team will review your application and get in touch with you.</p>
+                        <p>You can apply for a business loan by visiting our <a href="business.html">Business Support</a> page and filling out the application form. Our team will review your application and get in touch with you.</p>
                     </details>
                     <details class="faq-item">
                         <summary>What kind of AI & IT training do you offer?</summary>
-                        <p>We offer training modules that cover basic computer skills, an introduction to Artificial Intelligence (including tools like ChatGPT), and cybersecurity basics. You can find more information on our <a href="/ai-it.html">AI & IT Training</a> page.</p>
+                        <p>We offer training modules that cover basic computer skills, an introduction to Artificial Intelligence (including tools like ChatGPT), and cybersecurity basics. You can find more information on our <a href="ai-it.html">AI & IT Training</a> page.</p>
                     </details>
                     <details class="faq-item">
                         <summary>Can I donate to a specific program?</summary>
-                        <p>Yes, on our <a href="/donate.html">Donate</a> page, you can specify whether you would like your donation to go towards Business Development, AI & ICT Training, or general operations.</p>
+                        <p>Yes, on our <a href="donate.html">Donate</a> page, you can specify whether you would like your donation to go towards Business Development, AI & ICT Training, or general operations.</p>
                     </details>
                     <details class="faq-item">
                         <summary>How can I contact the foundation?</summary>
-                        <p>You can reach us through the form on our <a href="/contact.html">Contact Us</a> page, or by phone and email listed on that page.</p>
+                        <p>You can reach us through the form on our <a href="contact.html">Contact Us</a> page, or by phone and email listed on that page.</p>
                     </details>
                 </div>
             </div>
@@ -195,11 +200,27 @@
                     </div>
                 </div>
             </div>
-            <p>&copy; 2024 Imphumelelo Yentsha Foundation. All Rights Reserved.</p>
+
+            <div class="partners-section">
+                <h4>Our Partners</h4>
+                <div class="partners-logo-container">
+                    <a href="URL_OF_PARTNER_WEBSITE_1" target="_blank">
+                        <img src="images/partner1.png" alt="Partner Name 1 Logo" class="partner-logo">
+                    </a>
+                    <a href="URL_OF_PARTNER_WEBSITE_2" target="_blank">
+                        <img src="images/partner2.png" alt="Partner Name 2 Logo" class="partner-logo">
+                    </a>
+                    <a href="URL_OF_PARTNER_WEBSITE_3" target="_blank">
+                        <img src="images/partner3.png" alt="Partner Name 3 Logo" class="partner-logo">
+                    </a>
+                    
+                    </div>
+            </div>
+            <p>&copy; 2024 New Hope Foundation. All Rights Reserved.</p>
         </div>
     </footer>
 
-    <script src="/js/script.js"></script>
+    <script src="js/script.js"></script>
 
     <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script>
     <script type="text/javascript">(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';fnames[6]='COMPANY';ftypes[6]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
