--- a/business.html
+++ b/business.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Business Support - Imphumelelo Yentsha Foundation</title>
+    <title>Business Support - New Hope Foundation</title>
 
-    <link rel="apple-touch-icon" sizes="180x180" href="/favicon_io/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon_io/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon_io/favicon-16x16.png">
-    <link rel="manifest" href="/favicon_io/site.webmanifest">
-    <link rel="icon" type="image/x-icon" href="/favicon_io/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="favicon_io/site.webmanifest">
+    <link rel="icon" type="image/x-icon" href="favicon_io/favicon.ico">
 
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
+    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
     <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
@@ -24,18 +25,18 @@
     <header>
         <div class="container nav-container">
             <div class="logo-container">
-                <img src="favicon_io/picture.jpg" alt="Imphumelelo Yentsha" class="logo">
+                <img src="favicon_io/picture.png" alt="New Hope Foundation" class="logo">
                 <span class="tagline">The Bridge Between You & Your Success</span>
             </div>
             <nav>
                 <ul>
-                    <li><a href="/index.html">Home</a></li>
-                    <li><a href="/business.html">Business Support</a></li>
-                    <li><a href="/ai-it.html">AI & IT Training</a></li>
-                    <li><a href="/about.html">About Us</a></li>
-                    <li><a href="/blog.html">Blog</a></li>
-                    <li><a href="/contact.html">Contact</a></li>
-                    <li><a href="/donate.html" class="nav-donate-btn">Donate</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="business.html">Business Support</a></li>
+                    <li><a href="ai-it.html">AI & IT Training</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="donate.html" class="nav-donate-btn">Donate</a></li>
                 </ul>
             </nav>
         </div>
@@ -55,10 +56,10 @@
                     <h2>Our Comprehensive Support Package</h2>
                     <p>We offer more than just capital. Our holistic program is designed to guide you through every stage of your business journey, ensuring long-term success and sustainability.</p>
                     <ul>
-                        <li><i class="fas fa-money-bill-wave"></i> **Startup Capital**: Financial support to get your new or existing business off the ground.</li>
-                        <li><i class="fas fa-users"></i> **Mentorship**: One-on-one guidance from experienced business leaders.</li>
-                        <li><i class="fas fa-chalkboard-teacher"></i> **Business Training**: Workshops on planning, marketing, and financial management.</li>
-                        <li><i class="fas fa-chart-line"></i> **Monthly Reports & Visits**: We track your progress and provide continuous support to help you achieve your goals.</li>
+                        <li><i class="fas fa-money-bill-wave"></i> Startup Capital: Financial support to get your new or existing business off the ground.</li>
+                        <li><i class="fas fa-users"></i> Mentorship: One-on-one guidance from experienced business leaders.</li>
+                        <li><i class="fas fa-chalkboard-teacher"></i> Business Trainin: Workshops on planning, marketing, and financial management.</li>
+                        <li><i class="fas fa-chart-line"></i> Monthly Reports & Visits: We track your progress and provide continuous support to help you achieve your goals.</li>
                     </ul>
                 </div>
             </div>
@@ -194,11 +195,27 @@
                     </div>
                 </div>
             </div>
-            <p>&copy; 2024 Imphumelelo Yentsha Foundation. All Rights Reserved.</p>
+
+            <div class="partners-section">
+                <h4>Our Partners</h4>
+                <div class="partners-logo-container">
+                    <a href="URL_OF_PARTNER_WEBSITE_1" target="_blank">
+                        <img src="images/partner1.png" alt="Partner Name 1 Logo" class="partner-logo">
+                    </a>
+                    <a href="URL_OF_PARTNER_WEBSITE_2" target="_blank">
+                        <img src="images/partner2.png" alt="Partner Name 2 Logo" class="partner-logo">
+                    </a>
+                    <a href="URL_OF_PARTNER_WEBSITE_3" target="_blank">
+                        <img src="images/partner3.png" alt="Partner Name 3 Logo" class="partner-logo">
+                    </a>
+                    
+                    </div>
+            </div>
+            <p>&copy; 2024 New Hope Foundation. All Rights Reserved.</p>
         </div>
     </footer>
 
-    <script src="/js/script.js"></script>
+    <script src="js/script.js"></script>
 
     <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script>
     <script type="text/javascript">(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';fnames[6]='COMPANY';ftypes[6]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
