--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="iMlD99T4wUDTUUJj9DvPN2oVQo0CAIhTeLZ6cSIJzWM" />
-    <title>Imphumelelo Yentsha</title>
+    <title>New Hope Foundation</title>
 
-    <link rel="apple-touch-icon" sizes="180x180" href="/favicon_io/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon_io/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon_io/favicon-16x16.png">
-    <link rel="manifest" href="/favicon_io/site.webmanifest">
-    <link rel="icon" type="image/x-icon" href="/favicon_io/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="favicon_io/site.webmanifest">
+    <link rel="icon" type="image/x-icon" href="favicon_io/favicon.ico">
 
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
@@ -26,18 +26,18 @@
     <header>
         <div class="container nav-container">
             <div class="logo-container">
-                <img src="favicon_io/picture.jpg" alt="Imphumelelo Yentsha Foundation" class="logo">
+                <img src="favicon_io/picture.png" alt="New Hope Foundation" class="logo">
                 <span class="tagline">The Bridge Between You & Your Success</span>
             </div>
             <nav>
                 <ul>
-                    <li><a href="/index.html">Home</a></li>
-                    <li><a href="/business.html">Business Support</a></li>
-                    <li><a href="/ai-it.html">AI & IT Training</a></li>
-                    <li><a href="/about.html">About Us</a></li>
-                    <li><a href="/blog.html">Blog</a></li>
-                    <li><a href="/contact.html">Contact</a></li>
-                    <li><a href="/donate.html" class="nav-donate-btn">Donate</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="business.html">Business Support</a></li>
+                    <li><a href="ai-it.html">AI & IT Training</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="donate.html" class="nav-donate-btn">Donate</a></li>
                 </ul>
             </nav>
         </div>
@@ -47,10 +47,10 @@
         <section id="hero">
             <div class="container">
                 <h1>Empowering Eswatini's Entrepreneurs and Innovators.</h1>
-                <p>Imphumelelo Yentsha Foundation provides startup capital, mentorship, and cutting-edge training in AI & IT to build a new generation of leaders.</p>
+                <p>New Hope Foundation provides startup capital, mentorship, and cutting-edge training in AI & IT to build a new generation of leaders.</p>
                 <div class="hero-buttons">
                     <a href="#focus" class="btn">Explore Our Programs</a>
-                    <a href="/donate.html" class="btn btn-secondary">Support Our Mission</a>
+                    <a href="donate.html" class="btn btn-secondary">Support Our Mission</a>
                 </div>
             </div>
         </section>
@@ -64,13 +64,13 @@
                         <i class="fas fa-hand-holding-usd"></i>
                         <h3>Business Support & Capital</h3>
                         <p>We provide aspiring entrepreneurs with the financial capital, mentorship, and business training needed to launch and grow a successful venture in Eswatini.</p>
-                        <a href="/business.html" class="btn-card">Learn More</a>
+                        <a href="business.html" class="btn-card">Learn More</a>
                     </div>
                     <div class="card">
                         <i class="fas fa-robot"></i>
                         <h3>AI & IT Training</h3>
                         <p>Our programs equip you with essential digital skills, from basic computer literacy to an introduction to AI, preparing you for the future of work.</p>
-                        <a href="/ai-it.html" class="btn-card">Learn More</a>
+                        <a href="ai-it.html" class="btn-card">Learn More</a>
                     </div>
                 </div>
             </div>
@@ -86,7 +86,7 @@
                     </div>
                     <div class="mv-card">
                         <h3>Our Vision</h3>
-                        <p>A resilient and self-sustaining Eswatini where every individual has the opportunity and resources to turn their innovative ideas into reality, creating a prosperous future for all.</p>
+                        <p>To make Eswatini a resilient and progressively self-sustaining nation by empowering 30% of youth and entrepreneurs with innovation and digital skills, establishing four regional innovation hubs, and increasing locally driven enterprises by 25%, through partnerships that promote inclusive and sustainable economic growth by 2031.</p>
                     </div>
                 </div>
             </div>
@@ -96,8 +96,8 @@
             <div class="container text-center">
                 <h2>Ready to Take the Next Step?</h2>
                 <p>Whether you're starting a new business or looking to expand your skills, Imphumelelo Yentsha Foundation is here to support you.</p>
-                <a href="/business.html" class="btn btn-cta">Apply for a Loan Today</a>
-                <a href="/ai-it.html" class="btn btn-cta btn-secondary">Enroll in Training</a>
+                <a href="business.html" class="btn btn-cta">Apply for a Loan Today</a>
+                <a href="ai-it.html" class="btn btn-cta btn-secondary">Enroll in Training</a>
             </div>
         </section>
     </main>
@@ -119,7 +119,6 @@
                                     <div class="response" id="mce-success-response" style="display: none;"></div>
                                 </div>
                                 <div aria-hidden="true" style="position: absolute; left: -5000px;">
-                                    /* real people should not fill this in and expect good things - do not remove this or risk form bot signups */
                                     <input type="text" name="b_1a7773116f47d21a917431f57_2ddff778d9" tabindex="-1" value="">
                                 </div>
                                 <div class="optionalParent">
@@ -133,11 +132,27 @@
                     </div>
                 </div>
             </div>
-            <p>&copy; 2024 Imphumelelo Yentsha Foundation. All Rights Reserved.</p>
+
+            <div class="partners-section">
+                <h4>Our Partners</h4>
+                <div class="partners-logo-container">
+                    <a href="URL_OF_PARTNER_WEBSITE_1" target="_blank">
+                        <img src="images/partner1.png" alt="Partner Name 1 Logo" class="partner-logo">
+                    </a>
+                    <a href="URL_OF_PARTNER_WEBSITE_2" target="_blank">
+                        <img src="images/partner2.png" alt="Partner Name 2 Logo" class="partner-logo">
+                    </a>
+                    <a href="URL_OF_PARTNER_WEBSITE_3" target="_blank">
+                        <img src="images/partner3.png" alt="Partner Name 3 Logo" class="partner-logo">
+                    </a>
+                    
+                    </div>
+            </div>
+            <p>&copy; 2024 New Hope Foundation. All Rights Reserved.</p>
         </div>
     </footer>
 
-    <script src="/js/script.js"></script>
+    <script src="js/script.js"></script>
 
     <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script>
     <script type="text/javascript">(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';fnames[6]='COMPANY';ftypes[6]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
