--- a/about.html
+++ b/about.html
@@ -147,7 +147,7 @@
                 <div class="faq-container">
                     <details class="faq-item">
                         <summary>What is New Hope Foundation?</summary>
-                        <p>New Hope Foundation is a non-profit organization dedicated to empowering entrepreneurs and innovators in Eswatini by providing startup capital, mentorship, and training in AI & IT. Inspired by a Canadian Family (Perrots), whom their main aim was to help young people reach their full potential, but their sudden death left their work hanging, thus the Imphumelelo Yentsha Foundation which aims to continue their good work in ESwatini.</p>
+                        <p>New Hope Foundation is a non-profit organization dedicated to empowering entrepreneurs and innovators in Eswatini by providing startup capital, mentorship, and training in AI & IT. Inspired by a Canadian Family (Perrots), whom their main aim was to help young people reach their full potential, but their sudden death left their work hanging, thus New Hope Foundation which aims to continue their good work in ESwatini.</p>
                     </details>
                     <details class="faq-item">
                         <summary>How can I apply for a business loan?</summary>
