--- a/blog.html
+++ b/blog.html
@@ -19,7 +19,7 @@
     <header>
         <div class="container nav-container">
             <div class="logo-container">
-                <img src="favicon_io/picture.jpg" alt="New Hope Foundation" class="logo">
+                <img src="favicon_io/picture.png" alt="New Hope Foundation" class="logo">
                 <span class="tagline">The Bridge Between You & Your Success</span>
             </div>
             <nav>
