--- a/first-blog-post.html
+++ b/first-blog-post.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>First Post: The Journey Begins - New Hope Foundation</title>
+    <title>First Post: The Journey Begins - Imphumelelo Yensha Foundation</title>
     
     <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
@@ -19,7 +19,7 @@
     <header>
         <div class="container nav-container">
             <div class="logo-container">
-                <img src="favicon_io/picture.png" alt="New Hope Foundation" class="logo">
+                <img src="favicon_io/picture.png" alt="Imphumelelo Yensha Foundation" class="logo">
                 <span class="tagline">The Bridge Between You & Your Success</span>
             </div>
             <nav>
@@ -46,7 +46,7 @@
 
         <section id="post-content">
             <div class="container">
-                <p>Welcome to the first post on New Hope Foundation blog! We are thrilled to launch this platform as a way to share our mission, highlight the amazing entrepreneurs we support, and provide updates on our progress.</p>
+                <p>Welcome to the first post on Imphumelelo Foundation blog! We are thrilled to launch this platform as a way to share our mission, highlight the amazing entrepreneurs we support, and provide updates on our progress.</p>
                 <p>Over the coming months, we will be sharing stories of innovation, success, and the impact our community is making across Eswatini. Stay tuned!</p>
             </div>
         </section>
@@ -54,7 +54,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 New Hope Foundation Foundation. All Rights Reserved.</p>
+            <p>&copy; 2024 Imphumelelo Yensha Foundation. All Rights Reserved.</p>
         </div>
     </footer>
 
