--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="iMlD99T4wUDTUUJj9DvPN2oVQo0CAIhTeLZ6cSIJzWM" />
-    <title>New Hope Foundation</title>
+    <title>Imphumelelo Yensha Foundation</title>
 
     <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
@@ -26,7 +26,7 @@
     <header>
         <div class="container nav-container">
             <div class="logo-container">
-                <img src="favicon_io/picture.png" alt="New Hope Foundation" class="logo">
+                <img src="favicon_io/picture.png" alt="Imphumelelo Yensha" class="logo">
                 <span class="tagline">The Bridge Between You & Your Success</span>
             </div>
             <nav>
@@ -47,7 +47,7 @@
         <section id="hero">
             <div class="container">
                 <h1>Empowering Eswatini's Entrepreneurs and Innovators.</h1>
-                <p>New Hope Foundation provides startup capital, mentorship, and cutting-edge training in AI & IT to build a new generation of leaders.</p>
+                <p>Imphumelelo Yensha Foundation provides startup capital, mentorship, and cutting-edge training in AI & IT to build a new generation of leaders.</p>
                 <div class="hero-buttons">
                     <a href="#focus" class="btn">Explore Our Programs</a>
                     <a href="donate.html" class="btn btn-secondary">Support Our Mission</a>
@@ -95,7 +95,7 @@
         <section id="cta">
             <div class="container text-center">
                 <h2>Ready to Take the Next Step?</h2>
-                <p>Whether you're starting a new business or looking to expand your skills, Imphumelelo Yentsha Foundation is here to support you.</p>
+                <p>Whether you're starting a new business or looking to expand your skills, Imphumelelo Yensha Foundation is here to support you.</p>
                 <a href="business.html" class="btn btn-cta">Apply for a Loan Today</a>
                 <a href="ai-it.html" class="btn btn-cta btn-secondary">Enroll in Training</a>
             </div>
@@ -148,7 +148,7 @@
                     
                     </div>
             </div>
-            <p>&copy; 2024 New Hope Foundation. All Rights Reserved.</p>
+            <p>&copy; 2024 Imphumelelo Yensha Foundation. All Rights Reserved.</p>
         </div>
     </footer>
 
