--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us - New Hope Foundation</title>
+    <title>About Us - Imphumelelo Yensha Foundation</title>
 
     <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
@@ -24,7 +24,7 @@
     <header>
         <div class="container nav-container">
             <div class="logo-container">
-                <img src="favicon_io/picture.png" alt="New Hope Foundation" class="logo">
+                <img src="favicon_io/picture.png" alt="Imphumelelo Yensha Foundation" class="logo">
                 <span class="tagline">The Bridge Between You & Your Success</span>
             </div>
             <nav>
@@ -44,7 +44,7 @@
     <main>
         <section id="service-hero">
             <div class="container">
-                <h1>About New Hope Foundation</h1>
+                <h1>About Imphumelelo Yensha Foundation</h1>
                 <p>We are dedicated to empowering individuals and building a prosperous Eswatini.</p>
             </div>
         </section>
@@ -53,11 +53,10 @@
             <div class="container">
                 <div class="story-content">
                     <h2>Why We Do This</h2>
-                    <p>New Hope Foundation is a unique platform that allows every young person to dream, ESwatini is so rich when it comes
-                        to resources and support for young people, but then the youth lack the bridge to tape into those resources, for example to start a project
-                        you need funds or certain percentage to be granted those funds, Business Seminars are expensive to attend, mentorship and coaching is costly,
-                        laptops and IT lessons are costly as the world is moving digital, New Hope Foundation is creating the Bridge to that we bealive that every dream 
-                        is worth a try giving New Hope to Everyone..</p>
+                    <p>At Imphumelelo Yensha Foundation, we believe every young person in Eswatini deserves a real opportunity to bring their dreams to life.
+                         While many funding programs and resources exist in our country, most young people struggle to access them because they lack the required contribution or support needed to qualify.
+                         That’s where we step in. Imphumelelo Yensha Foundation helps bridge this gap by assisting youth with the required percentage needed to access revolving funds, while also providing mentorship, business guidance, and digital skills training.
+                         We do this because we believe that every dream is worth a try, and with the right bridge, the youth of Eswatini can build sustainable businesses and a brighter future for all</p>
                     <div class="mv-cards">
                         <div class="mv-card">
                             <h3>Our Mission</h3>
@@ -67,6 +66,14 @@
                             <h3>Our Vision</h3>
                             <p>A resilient and self-sustaining Eswatini where every individual has the opportunity and resources to turn their innovative ideas into reality, creating a prosperous future for all.</p>
                         </div>
+                        <div class="mv-card">
+                            <h3>Our Values</h3>
+                            <ul>
+                                <li><strong>Empowerment:</strong> We believe in the potential of every individual and strive to provide the tools and support needed for success.</li>
+                                <li><strong>Exellence:</strong> We strive to deliver the highest quality in everything we do, ensuring our programs, mentorship, and initiatives create real, lasting impact.</li>
+                                <li><strong>Innovation:</strong> We embrace creativity and forward-thinking solutions to address challenges and seize opportunities.</li>
+                                <li><strong>Sustainability:</strong> We focus on long-term impact, ensuring that our initiatives contribute to lasting economic and social development.</li>
+                            </ul>
                     </div>
                 </div>
             </div>
@@ -81,29 +88,30 @@
                     <h3>Board of Directors</h3>
                     <div class="team-grid">
                         <div class="team-member">
-                            <img src="https://via.placeholder.com/150" alt="Thandeka Gule" class="profile-pic">
-                            <h3> Gule</h3>
-                            <p class="role">Chairperson</p>
+                            <img src="team_pics/Thandeka.jpg" alt="Thandeka Gule" class="profile-pic">
+                            <h3>Mrs Thandeka Gama-Gule</h3>
+                            <h5> Chairperson</h5>
+                            
                         </div>
                         <div class="team-member">
                             <img src="https://via.placeholder.com/150" alt="Empty slot for future member" class="profile-pic">
-                            <h3>Coming Soon</h3>
-                            <p class="role"><Vice-Chairperson></Vice-Chairperson></p>
+                            <h3>Mr Mefika Shabalala</h3>
+                            <h5> Vice-chairperson</h5>
+                        </div>
+                        <div class="team-member placeholder-member">
+                            <img src="team_pics/Cylivia.jpg" alt="Empty slot for future member" class="profile-pic">
+                            <h3>Ms Sylvia Williamson</h3>
+                            <h5>Treasure</h5>
                         </div>
                         <div class="team-member placeholder-member">
                             <img src="https://via.placeholder.com/150?text=Empty+Slot" alt="Empty slot for future member" class="profile-pic">
-                            <h3>Coming soon</h3>
-                            <p class="role">Treasure</p>
+                            <h3>Mrs Tiyandza Mavuso</h3>
+                            <h5>Secretary General</h5>
                         </div>
                         <div class="team-member placeholder-member">
                             <img src="https://via.placeholder.com/150?text=Empty+Slot" alt="Empty slot for future member" class="profile-pic">
-                            <h3>Coming Soon</h3>
-                            <p class="role">Legal Advisor</p>
-                        </div>
-                        <div class="team-member placeholder-member">
-                            <img src="https://via.placeholder.com/150?text=Empty+Slot" alt="Empty slot for future member" class="profile-pic">
-                            <h3>Coming Soon</h3>
-                            <p class="role">Secretary</p>
+                            <h3>Ms Bongiwe Madonsela</h3>
+                            <h5>Vice-Secretary General</h5>
                         </div>
                     </div>
                 </div>
@@ -112,30 +120,34 @@
                     <h3>Management Team</h3>
                     <div class="team-grid">
                         <div class="team-member">
-                            <img src="team_pics1/Ayanda.jpg" alt="Ayanda Mkhonta" class="profile-pic">
-                            <h3>Ayanda Mkhonta</h3>
-                            <p class="role">No Role yet</p>
+                            <img src="team_pics/Ayanda.jpg" alt="Ayanda Mkhonta" class="profile-pic">
+                            <h3>Mr Ayanda Mkhonta</h3>
+                            <p class="role">Managing Director</p>
                         </div>
                         <div class="team-member">
-                            <img src="team_pics/sakhile.jpg" alt="Sakhile Gamedze" class="profile-pic">
-                            <h3>Sakhile Gamedze</h3>
-                            <p class="role">No Role Yet</p>
-                        </div>
-                        <div class="team-member">
-                            <img src="team_pics/Tenele.jpg" alt="Tenele Tsela" class="profile-pic">
-                            <h3>Tenele Tsele</h3>
+                            <img src="team_pics/Sambulo.jpg" alt="Sambulo Khumalo" class="profile-pic">
+                            <h3>Mr Sambulo Khumalo</h3>
                             <p class="role">Operations Manager</p>
                         </div>
                         <div class="team-member">
-                            <img src="team_pics/Sivumelwano.jpg" alt="Sivumelwano Zulu" class="profile-pic">
-                            <h3>Sivumelwano Zulu</h3>
-                            <p class="role">No Role yet</p>
+                            <img src="team_pics/Tenele.jpg" alt="Tenele Tsela" class="profile-pic">
+                            <h3>Ms Tenele Tsela</h3>
+                            <p class="role">Public Relations</p>
                         </div>
                         <div class="team-member">
-                            <img src="team_pics1/Nkhosingiphile.jpg" alt="Slevu" class="profile-pic">
-                            <h3>Nkhosingiphile Mangwe</h3>
-                            <p class="role">No role yet</p>
+                            <img src="team_pics/Phumlani.jpg" alt="Phumlani Sihlongonyane" class="profile-pic">
+                            <h3>Mr Phumlani Sihlongonyane</h3>
+                            <p class="role">Business Coaching & Mentorship</p>
                         </div>
+                        <div class="team-member">
+                            <img src="team_pics/Sivumelwano.jpg" alt="Sivumelwano Zulu" class="profile-pic">
+                            <h3>Ms Sivumelwano Zulu</h3>
+                            <p class="role">Finance & Administration</p>
+                        </div>
+                        <div class="team-member">
+                            <img src="team_pics/sakhile.jpg" alt="Sakhile Gamedze" class="profile-pic">
+                            <h3>Mr Sakhile Gamedze</h3>
+                            <p class="role">Training & Development</p>
                     </div>
                 </div>
             </div>
@@ -146,8 +158,8 @@
                 <h2 class="section-title">Frequently Asked Questions</h2>
                 <div class="faq-container">
                     <details class="faq-item">
-                        <summary>What is New Hope Foundation?</summary>
-                        <p>New Hope Foundation is a non-profit organization dedicated to empowering entrepreneurs and innovators in Eswatini by providing startup capital, mentorship, and training in AI & IT. Inspired by a Canadian Family (Perrots), whom their main aim was to help young people reach their full potential, but their sudden death left their work hanging, thus New Hope Foundation which aims to continue their good work in ESwatini.</p>
+                        <summary>What is Imphumelelo Yensha Foundation?</summary>
+                        <p>Imphumelelo Yensha Foundation is a non-profit organization dedicated to empowering entrepreneurs and innovators in Eswatini by providing startup capital, mentorship, and training in AI & IT. Inspired by a Canadian Family (Perrots), whom their main aim was to help young people reach their full potential, but their sudden death left their work hanging, thus New Hope Foundation which aims to continue their good work in ESwatini.</p>
                     </details>
                     <details class="faq-item">
                         <summary>How can I apply for a business loan?</summary>
@@ -216,7 +228,7 @@
                     
                     </div>
             </div>
-            <p>&copy; 2024 New Hope Foundation. All Rights Reserved.</p>
+            <p>&copy; Imphumelelo Yensha Foundation. All Rights Reserved.</p>
         </div>
     </footer>
 
