--- a/donate.html
+++ b/donate.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Donate - New Hope Foundation </title>
+    <title>Donate - Imphumelelo Yensha Foundation </title>
 
     <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
@@ -24,7 +24,7 @@
     <header>
         <div class="container nav-container">
             <div class="logo-container">
-                <img src="favicon_io/picture.jpg" alt="New Hope Foundation" class="logo">
+                <img src="favicon_io/picture.jpg" alt="Imphumelelo Yensha Foundation" class="logo">
                 <span class="tagline">The Bridge Between You & Your Success</span>
             </div>
             <nav>
@@ -156,7 +156,7 @@
                     
                     </div>
             </div>
-            <p>&copy; 2024 New Hope Foundation. All Rights Reserved.</p>
+            <p>&copy; 2024 Imphumelelo Yensha Foundation. All Rights Reserved.</p>
         </div>
     </footer>
 
