--- a/business.html
+++ b/business.html
@@ -206,7 +206,7 @@
                         <img src="images/partner2.png" alt="Partner Name 2 Logo" class="partner-logo">
                     </a>
                     <a href="URL_OF_PARTNER_WEBSITE_3" target="_blank">
-                        <img src="images/partner3.png" alt="Partner Name 3 Logo" class="partner-logo">
+                        <img src="Partner_logo/manyika.jpg" alt="Partner Name 3 Logo" class="partner-logo">
                     </a>
                     
                     </div>
